--- a/html/bootstrap_progress_bars.html
+++ b/html/bootstrap_progress_bars.html
@@ -141,7 +141,13 @@
                     <div class="container_text">
                         <div class="w-title">
                             <div class="container">
-                                <h1>Bootstrap 5 Сетки</h1>
+
+                                <div class="w-title">
+                                    <div class="container">
+                                        <h1>Прогресс в Bootstrap 5</h1>
+                                    </div>
+                                </div>
+
                             </div>
                         </div>
                         <div class="column is-9-desktop is-12-tablet is-12-mobile w-content">
@@ -168,7 +174,237 @@
                             </div>
 
                             <section id="w-main">
-                                <h3>Система сеток Bootstrap 5</h3>
+
+                                <img src="../img/18.webp" alt="17" class="pictures">
+
+                                <p>Bootstrap предлагает компонент для отображения шкалы прогресса на сайте. Такая шкала
+                                    обычно применяются для
+                                    предоставления пользователю информации о ходе выполнения того или иного процесса или
+                                    действия. Пользователи могут
+                                    мгновенно увидеть, сколько действий уже выполнено и сколько ещё предстоит сделать.
+                                </p>
+                                <p>Bootstrap не использует HTML-элемент <a href="/html/progress">&lt;progress&gt;</a>
+                                    для шкалы прогресса, поэтому вы
+                                    можете компоновать шкалы прогресса, анимировать их и размещать над ними текстовые
+                                    метки.</p>
+                                <hr>
+
+                                <h2>Шкала прогресса по умолчанию</h2>
+
+                                <p>Чтобы создать стандартную шкалу прогресса, используйте класс <span
+                                        class="class">.progress</span> с вложенным в него
+                                    <span class="class">.progress-bar</span>.
+                                </p>
+
+                                <div class="w3-example">
+                                    <h3> Пример</h3>
+                                    <div class="w3-code notranslate htmlHigh">
+                                        <pre>
+&lt;div <span>class="progress"</span>&gt;
+    &lt;div <span>class="progress-bar"</span> role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0"
+        aria-valuemax="100">&lt;/div&gt;
+&lt;/div&gt;
+</pre>
+                                        <div class="progress">
+                                            <div class="progress-bar" role="progressbar" style="width: 75%"
+                                                aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                                        </div>
+                                    </div>
+                                    <i><span style="color:#e7e9eb;">end.</span></i>
+                                </div>
+                                <hr>
+
+                                <h2>Контекстные классы</h2>
+
+                                <p>Вы можете использовать контекстные классы, чтобы обеспечить дополнительную семантику
+                                    с помощью цвета.</p>
+
+                                <div class="w3-example">
+                                    <h3> Пример</h3>
+                                    <div class="w3-code notranslate htmlHigh">
+                                        <pre>
+&lt;div class="progress"&gt;
+    &lt;div class="progress-bar <span>bg-success</span>" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0"
+        aria-valuemax="100"&gt;&lt;/div&gt;
+&lt;/div&gt;
+&lt;br&gt;
+&lt;div class="progress"&gt;
+    &lt;div class="progress-bar <span>bg-info</span>" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0"
+        aria-valuemax="100">&lt;/div&gt;
+&lt;/div&gt;
+&lt;br&gt;
+&lt;div class="progress"&gt;
+    &lt;div class="progress-bar <span>bg-warning</span>" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0"
+        aria-valuemax="100">&lt;/div&gt;
+&lt;/div&gt;
+&lt;br&gt;
+&lt;div class="progress"&gt;
+    &lt;div class="progress-bar <span>bg-danger"</span> role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0"
+        aria-valuemax="100">&lt;/div&gt;
+&lt;/div&gt;
+&lt;br&gt;
+&lt;div class="progress"&gt;
+    &lt;div class="progress-bar <span>bg-light</span>" role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0"
+        aria-valuemax="100">&lt;/div&gt;
+&lt;/div&gt;
+&lt;br&gt;
+&lt;div class="progress"&gt;
+    &lt;div class="progress-bar <span>bg-dark</span>" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0"
+        aria-valuemax="100"&gt;&lt;/div&gt;
+&lt;/div&gt;
+                                    </pre>
+                                        <div class="progress">
+                                            <div class="progress-bar bg-success" role="progressbar" style="width: 25%"
+                                                aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                        </div>
+                                        <br>
+                                        <div class="progress">
+                                            <div class="progress-bar bg-info" role="progressbar" style="width: 50%"
+                                                aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                                        </div>
+                                        <br>
+                                        <div class="progress">
+                                            <div class="progress-bar bg-warning" role="progressbar" style="width: 75%"
+                                                aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                                        </div>
+                                        <br>
+                                        <div class="progress">
+                                            <div class="progress-bar bg-danger" role="progressbar" style="width: 100%"
+                                                aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                                        </div>
+                                        <br>
+                                        <div class="progress">
+                                            <div class="progress-bar bg-light" role="progressbar" style="width: 40%"
+                                                aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
+                                        </div>
+                                        <br>
+                                        <div class="progress">
+                                            <div class="progress-bar bg-dark" role="progressbar" style="width: 80%"
+                                                aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                                        </div>
+                                    </div>
+                                    <i><span style="color:#e7e9eb;">end.</span></i>
+                                </div>
+                                <hr>
+
+                                <h2>Полоски</h2>
+
+                                <p>Вы можете установить на шкале полоски, добавив класс <span
+                                        class="class">.progress-bar-striped</span> к элементу
+                                    <span class="class">.progress-bar</span>.
+                                </p>
+
+                                <div class="w3-example">
+                                    <h3> Пример</h3>
+                                    <div class="w3-code notranslate htmlHigh">
+                                        <pre>
+&lt;div class="progress"&gt;
+    &lt;div class="<vv1>progress-bar</vv1> <span>progress-bar-striped</span>" role="progressbar" style="width: 10%" aria-valuenow="10"
+        aria-valuemin="0" aria-valuemax="100">&lt;/div&gt;
+&lt;/div&gt;
+&lt;br&gt;
+&lt;div class="progress"&gt;
+    &lt;div class="<vv1>progress-bar</vv1> <span>progress-bar-striped</span> bg-success" role="progressbar" style="width: 25%" aria-valuenow="25"
+        aria-valuemin="0" aria-valuemax="100">&lt;/div&gt;
+&lt;/div&gt;
+&lt;br&gt;
+&lt;div class="progress"&gt;
+    &lt;div class="<vv1>progress-bar</vv1> <span>progress-bar-striped</span> bg-info" role="progressbar" style="width: 50%" aria-valuenow="50"
+        aria-valuemin="0" aria-valuemax="100"&gt;&lt;/div&gt;
+&lt;/div&gt;
+&lt;br&gt;
+&lt;div class="progress"&gt;
+    &lt;div class="<vv1>progress-bar</vv1> <span>progress-bar-striped </span>bg-warning" role="progressbar" style="width: 75%" aria-valuenow="75"
+        aria-valuemin="0" aria-valuemax="100">&lt;/div>
+&lt;/div&gt;
+&lt;br&gt;
+&lt;div class="progress"&gt;
+    &lt;div class="<vv1>progress-bar </vv1><span>progress-bar-striped</span> bg-danger" role="progressbar" style="width: 100%" aria-valuenow="100"
+        aria-valuemin="0" aria-valuemax="100"&gt;&lt;/div&gt;
+&lt;/div&gt;
+&lt;br&gt;
+&lt;div class="progress"&gt;
+    &lt;div class="<vv1>progress-bar</vv1> <span>progress-bar-striped</span> bg-light" role="progressbar" style="width: 40%" aria-valuenow="40"
+        aria-valuemin="0" aria-valuemax="100"&gt;&lt;/div&gt;
+&lt;/div&gt;
+&lt;br&gt;
+&lt;div class="progress"&gt;
+    &lt;div class="<vv1>progress-bar</vv1> <span>progress-bar-striped</span> bg-dark" role="progressbar" style="width: 80%" aria-valuenow="80"
+        aria-valuemin="0" aria-valuemax="100"&gt;&lt;/div&gt;
+&lt;/div&gt;
+</pre>
+                                        <div class="progress">
+                                            <div class="progress-bar progress-bar-striped" role="progressbar"
+                                                style="width: 10%" aria-valuenow="10" aria-valuemin="0"
+                                                aria-valuemax="100"></div>
+                                        </div>
+                                        <br>
+                                        <div class="progress">
+                                            <div class="progress-bar progress-bar-striped bg-success" role="progressbar"
+                                                style="width: 25%" aria-valuenow="25" aria-valuemin="0"
+                                                aria-valuemax="100"></div>
+                                        </div>
+                                        <br>
+                                        <div class="progress">
+                                            <div class="progress-bar progress-bar-striped bg-info" role="progressbar"
+                                                style="width: 50%" aria-valuenow="50" aria-valuemin="0"
+                                                aria-valuemax="100"></div>
+                                        </div>
+                                        <br>
+                                        <div class="progress">
+                                            <div class="progress-bar progress-bar-striped bg-warning" role="progressbar"
+                                                style="width: 75%" aria-valuenow="75" aria-valuemin="0"
+                                                aria-valuemax="100"></div>
+                                        </div>
+                                        <br>
+                                        <div class="progress">
+                                            <div class="progress-bar progress-bar-striped bg-danger" role="progressbar"
+                                                style="width: 100%" aria-valuenow="100" aria-valuemin="0"
+                                                aria-valuemax="100"></div>
+                                        </div>
+                                        <br>
+                                        <div class="progress">
+                                            <div class="progress-bar progress-bar-striped bg-light" role="progressbar"
+                                                style="width: 40%" aria-valuenow="40" aria-valuemin="0"
+                                                aria-valuemax="100"></div>
+                                        </div>
+                                        <br>
+                                        <div class="progress">
+                                            <div class="progress-bar progress-bar-striped bg-dark" role="progressbar"
+                                                style="width: 80%" aria-valuenow="80" aria-valuemin="0"
+                                                aria-valuemax="100"></div>
+                                        </div>
+                                    </div>
+                                    <i><span style="color:#e7e9eb;">end.</span></i>
+                                </div>
+                                <hr>
+
+                                <h2>Анимированные полоски</h2>
+
+                                <p>Вы можете анимировать полоски, добавив класс <span
+                                        class="class">.progress-bar-animated</span> к элементу <span
+                                        class="class">.progress</span>.</p>
+
+                                <div class="w3-example">
+                                    <h3> Пример</h3>
+                                    <div class="w3-code notranslate htmlHigh">
+                                        <pre>
+&lt;div class="<vv1>progress</vv1>"&gt;
+    &lt;div class="progress-bar progress-bar-striped <span>progress-bar-animated" </span>role="progressbar" aria-valuenow="75"
+        aria-valuemin="0" aria-valuemax="100" style="width: 75%">&lt;/div&gt;
+&lt;/div&gt;
+</pre>
+                                        <div class="progress">
+                                            <div class="progress-bar progress-bar-striped progress-bar-animated"
+                                                role="progressbar" aria-valuenow="75" aria-valuemin="0"
+                                                aria-valuemax="100" style="width: 75%"></div>
+                                        </div>
+                                    </div>
+                                    <i><span style="color:#e7e9eb;">end.</span></i>
+                                </div>
+
+
+
 
 
                             </section>
