--- a/html/bootstrap_cards.html
+++ b/html/bootstrap_cards.html
@@ -141,7 +141,13 @@
                     <div class="container_text">
                         <div class="w-title">
                             <div class="container">
-                                <h1>Bootstrap 5 Сетки</h1>
+
+                                <div class="w-title">
+                                    <div class="container">
+                                        <h1>Карточки в Bootstrap 5</h1>
+                                    </div>
+                                </div>
+
                             </div>
                         </div>
                         <div class="column is-9-desktop is-12-tablet is-12-mobile w-content">
@@ -167,7 +173,107 @@
                             </div>
 
                             <section id="w-main">
-                                <h3>Система сеток Bootstrap 5</h3>
+
+                                <img src="../img/20.jpg" alt="20" class="pictures">
+
+                                <p>Карточка — это контейнер с небольшой стилизацией, в который можно поместить
+                                    практически любое содержимое. Доступно
+                                    множество вариантов оформления, таких как выравнивание, поля, цвета, заголовки и
+                                    многое другое.</p>
+                                <hr>
+
+                                <h2>Базовая карточка</h2>
+
+                                <p>Чтобы создать базовую карточку, примените классы <span class="class">.card</span> и
+                                    <span class="class">.card-body</span> к элементу, для внешнего контейнера карточки.
+                                </p>
+                                <p>Добавьте <span class="class">.card-title</span> к любым элементам заголовка и <span
+                                        class="class">.card-text</span> к
+                                    элементам текста.</p>
+
+                                <div class="w3-example">
+                                    <h3> Пример</h3>
+                                    <div class="w3-code notranslate htmlHigh">
+                                        <pre>
+&lt;div class="<span>card card-body</span>"&gt;
+    &lt;h4 class="<span>card-title</span>"&gt;Полироль для сапог&lt;/h4&gt;
+    &lt;p class="<span>card-text</span>"&gt;Полироль для сапог — это восковая паста,
+        крем или жидкость, используемая для полировки, придания блеска и водонепроницаемости
+        кожаным туфлям или сапогам для продления срока службы, а также восстановления,
+        поддержания и улучшения их внешнего вида.&lt;/p&gt;
+    &lt;a href="#" class="btn btn-primary">Подробнее&lt;/a&gt;
+&lt;/div&gt;
+</pre>
+                                        <div class="card card-body">
+                                            <h4 class="card-title">Полироль для сапог</h4>
+                                            <p class="card-text">Полироль для сапог — это восковая паста,
+                                                крем или жидкость, используемая для полировки, придания блеска и
+                                                водонепроницаемости
+                                                кожаным туфлям или сапогам для продления срока службы, а также
+                                                восстановления,
+                                                поддержания и улучшения их внешнего вида.</p>
+                                            <a href="#" class="btn btn-primary">Подробнее</a>
+                                        </div>
+                                    </div>
+                                    <i><span style="color:#e7e9eb;">end.</span></i>
+                                </div>
+                                <hr>
+
+                                <h2>Верхний и нижний колонтитулы</h2>
+
+                                <p>Вы можете установить верхний и/или нижний колонтитул, добавив элемент <a
+                                        href="/html/div">&lt;div&gt;</a> с классом
+                                    <span class="class">.card-header</span> или <span class="class">.card-footer</span>.
+                                </p>
+
+                                <div class="w3-example">
+                                    <h3> Пример</h3>
+                                    <div class="w3-code notranslate htmlHigh">
+                                        <pre>
+&lt;div class="card" style="max-width: 20rem;"&gt;
+    &lt;<vv1>div</vv1><span> class="card-header"</span> &gt;
+        От спонсора
+    &lt;<vv1>/div</vv1>&gt;
+    &lt;div class="card-body"&gt;
+        &lt;h4 class="card-title"&gt;Угги&lt;/h4&gt;
+        &lt;p class="card-text"&gt;Лучшие угги на свете. Бесплатная доставка, круглосуточная поддержка клиентов.&lt;/p&gt;
+    &lt;/div&gt;
+    &lt;<vv1>div </vv1><span>class="card-footer"</span>&gt;
+        от uuuuggghhh.com
+    &lt;<vv1>/div</vv1>&gt;
+&lt;/div&gt;
+</pre>
+                                        <div class="card" style="max-width: 20rem;">
+                                            <div class="card-header">
+                                                От спонсора
+                                            </div>
+                                            <div class="card-body">
+                                                <h4 class="card-title">Угги</h4>
+                                                <p class="card-text">Лучшие угги на свете. Бесплатная доставка,
+                                                    круглосуточная поддержка клиентов.</p>
+                                            </div>
+                                            <div class="card-footer">
+                                                от uuuuggghhh.com
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <i><span style="color:#e7e9eb;">end.</span></i>
+                                </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
                             </section>
